VSE: Clips with Alpha Over against a transparent background fail to reflect opacity changes #38557

Closed
opened 2014-02-09 10:28:45 +01:00 by Seth L. · 7 comments

System Information
Observed on Mac OS X 10.6 and 10.8

Blender Version
Broken: 2.69.0 r60991 Also confirmed on latest unofficial build 2.69b53f310
Worked: never, as far as I know

Short description of error
In the Video Sequence Editor a clip with its blend mode set to Alpha Over cannot have its Opacity adjusted when over a transparent background. I observed this with PNG image sequences, but it may occur with other file types as well.
If a solid background image is added to a channel beneath the transparent clip the problem disappears.
This leads me to suspect that Alpha Over was coded only to account for transparency over solid - not transparency over tranparency.
This bug prevents image sequences with transparency from being composited correctly and in that regard is a workflow-stopper.
For example if a client wanted an animated logo fading in over a transparent background this bug would stop you from being able to produce it.

Exact steps for others to reproduce the error

  1. Get a PNG with transparency. I am providing one below.
  2. In the Video Sequence Editor timeline choose Add > Image > and add the PNG.
  3. With the clip selected, under 'Edit Strip' change the Blend mode to 'Alpha Over'.
  4. Lower the clip's Opacity slider and see no effect at all. Even with the slider at 0 the clip will still be fully visible.

Refreshing the Sequencer doesn't help. Neither does reloading the .blend.

A PNG with transparency for testing:
suz-with-alpha.png

An example .blend (uses above .png file)
vse-alpha-over-opacity-bug.blend

**System Information** Observed on Mac OS X 10.6 and 10.8 **Blender Version** Broken: 2.69.0 r60991 Also confirmed on latest unofficial build 2.69b53f310 Worked: never, as far as I know **Short description of error** In the Video Sequence Editor a clip with its blend mode set to Alpha Over cannot have its Opacity adjusted when over a transparent background. I observed this with PNG image sequences, but it may occur with other file types as well. If a *solid* background image is added to a channel beneath the transparent clip the problem disappears. This leads me to suspect that Alpha Over was coded only to account for transparency over solid - not transparency over tranparency. This bug prevents image sequences with transparency from being composited correctly and in that regard is a workflow-stopper. For example if a client wanted an animated logo fading in over a transparent background this bug would stop you from being able to produce it. **Exact steps for others to reproduce the error** 1. Get a PNG with transparency. I am providing one below. 2. In the Video Sequence Editor timeline choose Add > Image > and add the PNG. 3. With the clip selected, under 'Edit Strip' change the Blend mode to 'Alpha Over'. 4. Lower the clip's Opacity slider and see no effect at all. Even with the slider at 0 the clip will still be fully visible. Refreshing the Sequencer doesn't help. Neither does reloading the .blend. A PNG with transparency for testing: ![suz-with-alpha.png](https://archive.blender.org/developer/F76557/suz-with-alpha.png) An example .blend (uses above .png file) [vse-alpha-over-opacity-bug.blend](https://archive.blender.org/developer/F76559/vse-alpha-over-opacity-bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @quantumanomaly

Added subscriber: @quantumanomaly
Sergey Sharybin self-assigned this 2014-02-11 09:37:33 +01:00

This issue was referenced by blender/blender-addons-contrib@23fe23f951

This issue was referenced by blender/blender-addons-contrib@23fe23f951f017438dfd8e57eadc5c70d027417d

This issue was referenced by 23fe23f951

This issue was referenced by 23fe23f951f017438dfd8e57eadc5c70d027417d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 23fe23f951.

Closed by commit 23fe23f951.
Author

Thank you for the prompt fix, sergey! You're awesome!

Thank you for the prompt fix, sergey! You're awesome!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38557
No description provided.