Fix T38557: VSE clips with Alpha Over against a transparent background fail to reflect opacity changes